added the ability to see the detailed run trace, not sure if how I see its the end is correct

--- a/Instrumentation/makefile
+++ b/Instrumentation/makefile
@@ -1,16 +1,22 @@
 #Idea, make a program that gives the percentage of same code using afl-gcc
 #CC=afl-clang-fast
-CC=afl-instr/instr-gcc
+#CC=afl-instr/instr-gcc
+CC=test_folder/instr-gcc
+RUN=test_folder/afl-fuzz
 FLAGS= -static
 EFLAGS= -fsanitize=address,undefined -fno-sanitize-recover=undefined -g -O0
 BASE_FLAGS= -fsanitize=address -g
 EXE=simple
+EXE2=simple2
 
-main: clean simple
+main: clean simple fuzz
 
 #------------------------ OTHER -------------------------#
 simple:
-	$(CC) $(EFLAGS) ./simple_program.c -save-temps -o $(EXE) -w
+	$(CC) ./simple_program.c -save-temps -o $(EXE) -w
+
+fuzz:
+	$(RUN) -m none -i input -o out ./simple ./simple
 
 #--------CLEANING---------
 
