To solve the bug, removed the option to know what blocks are being hit, this will have to be added latter, for now, I'll focus on simply continuing with the implementation

--- a/Instrumentation/makefile
+++ b/Instrumentation/makefile
@@ -43,7 +43,7 @@ instr-all:
 valgrind:
 	valgrind --leak-check=full ./$(ALL)
 test_memory:
-	valgrind --leak-check=full test_folder/afl-fuzz -m none -i input -o out ./fact ./simple2
+	valgrind --leak-check=full afl-instr/afl-fuzz -m none -i input -o out ./fact ./simple2
 
 
 #--------CLEANING---------
