started adding afl-clang-fast support, still a lot to do, like specifying that we are using node coverage instead of edege coverage, and specifying that we are using ids specific to the values in said BB

--- a/Instrumentation/afl-instr/Makefile
+++ b/Instrumentation/afl-instr/Makefile
@@ -102,7 +102,7 @@ all_done: test_build
 .NOTPARALLEL: clean
 
 clean:
-	rm -f $(PROGS) instr-as as afl-g++ afl-clang afl-clang++ *.o *~ a.out core core.[1-9][0-9]* *.stackdump test .test test-instr .test-instr0 .test-instr1 qemu_mode/qemu-2.10.0.tar.bz2 afl-qemu-trace
+	rm -f $(PROGS) instr-as as afl-g++ afl-clang afl-clang++ *.i *.s *.o *~ a.out core core.[1-9][0-9]* *.stackdump test .test test-instr .test-instr0 .test-instr1 qemu_mode/qemu-2.10.0.tar.bz2 afl-qemu-trace
 
 #TODO -> provavelmente vou ter de mudar os nomes no install#
 
